--- a/02hangukuniversity/css/common.css
+++ b/02hangukuniversity/css/common.css
@@ -20,10 +20,6 @@
 	.ptb20{padding: 20px 0 !important;}
 	.ptb30{padding: 30px 0 !important;}
 
-	.p_hk01{padding: 80px 90px !important;}
-	.p_hk02{padding: 80px 40px !important;}
-	.p_hk03{padding: 30px 20px 20px 20px !important;}
-	
 	/*margin-bottom*/
 	.mb10{margin-bottom: 10px !important;}
 	.mb20{margin-bottom: 20px !important;}
@@ -38,5 +34,13 @@
 	.line_ah:after{content: ''; width: 150px; height: 1px; background-color: #000; margin: 15px auto; display: block; }
 
 	.bgc_gray{background-color: #ccc;}
+
+
+
+	/*hankug*/
+	.p_hk01{padding: 80px 90px !important;}
+	.p_hk02{padding: 80px 40px !important;}
+	.p_hk03{padding: 30px 20px 20px 20px !important;}
+	
 	.bgc_hkblue01{background-color: #0044af;}
 	.bgc_hkblue02{background-color: #00163b;}
