--- a/chavy/css/common.css
+++ b/chavy/css/common.css
@@ -38,9 +38,9 @@
 
 
 /*chavy*/
-.mt_pb{padding-bottom: 60px !important;}
+.mt_pb{padding-bottom: 45px !important;}
 .txt_pb{padding-bottom: 70px !important;}
-.bn_pt{padding-top: 70px !important;}
+.bn_pt{padding-top: 60px !important;}
 .bn_pb{padding-bottom: 45px !important;}
 
 .ch_bgc01{background-color: #2c2c96;}
@@ -50,4 +50,5 @@
 .ch_c02{color: #2c2c96;} 
 .ch_c03{color: #6e6e6e;} 
 
-.ch_hover:hover{box-shadow: 0 0 7px #2c2c96; opacity: 1; transition: 0.3s;}
+.ch_hover:hover{box-shadow: 0 0 15px rgba(44,44,150,0.5); opacity: 1; transition: 0.3s; border: 1px solid #2c2c96;}
+.ch_hover2:hover{box-shadow: 0 0 15px rgba(110,110,110,0.3); opacity: 1; transition: 0.3s; border: 1px rgba(110,110,110,0.3);}
