--- a/chavy/css/style.css
+++ b/chavy/css/style.css
@@ -1,32 +1,93 @@
 @charset "utf-8";
 
 body {color: #222222;}
-body a{color: #222222; font-weight: 550;}
+body a{color: #222222; font-weight: 400;}
 
 /*header*/
 .header .logo{float: left;width: 175px; padding-top: 35px; padding-bottom: 15px;}
 .header .logo img{display: block;}
-.header .gnb{float: left;padding-left: 180px; padding-top: 55px;}
+.header .gnb{float: left;padding-left: 135px; padding-top: 55px;}
 .header .gnb li{float: left; padding: 0 35px;}
-.header .gnb a{display: block; position: relative;}
+.header .gnb a{display: block; position: relative; font-weight: 550;}
 .header .gnb a:after{content: ''; display: block; width: 0%; height: 2px; background-color: #adadad; transition: 0.5s; margin: 0 auto;}
 .header .gnb li:hover a:after{content: ''; display: block; width: 100%; height: 2px; background-color: #adadad; transition: 0.5s;}
 .header .utilmenu{float: right; padding-top: 40px;}
 .header .utilmenu li{float: left; width: 120px; height: 50px; border-radius: 25px; margin-left: 15px; overflow: hidden;}
-.header .utilmenu a{display: block; line-height: 50px;}
+.header .utilmenu a{display: block; line-height: 50px; font-weight: 550;}
 .header .utilmenu li.active a{background-color: #2c2c96;color: #fff;}
-.header .utilmenu a:hover{background-color: #2c2c96;color: #fff;}
+.header .utilmenu a:hover{background-color: #2c2c96;color: #fff;font-weight: bold; transition: 0.3s}
 
 /*mainslider*/
 .bx-wrapper {-moz-box-shadow: none;-webkit-box-shadow: none;box-shadow: none;border: none;margin-bottom: 0;}
 
-.ms_wrap{width: 1200px; height: 785px;margin: 0 auto;}
-.mainslider{width: 100%; height: 100%;}
-.mainslider li{position: relative;}
-.mainslider img{display: block; position: absolute; left: 50%; margin-left: -960px ;}
+.ms_wrap{width: 1200px;height: 785px; margin: 0 auto; position: relative;}
+.mainslider li{overflow: hidden;}
+.mainslider img{position: absolute; left: 50%; margin-left: -200px;}
 .mainslider .txt{position: absolute; top: 180px; width: 600px;}
+.mainslider .txt h2{font-size: 48px;}
+.mainslider .txt p{font-size: 18px;}
+.mainslider .txt a{display: block; width: 185px; height: 60px; line-height: 60px; color: #fff; border-radius: 30px; transition: 0.3s}
 
+/*banner*/
+.banner01{height: 280px;}
+.banner01 h2{font-size: 38px;}
+.banner01 p{font-size: 18px;}
 
+/*cont01*/
+.cont01{height: 930px;}
+.cont01txt{float: left; padding-top: 285px; width: 500px;}
+.cont01txt h2{font-size: 26px; padding-bottom: 35px;}
+.cont01txt p{font-size: 18px; padding-bottom: 60px;}
+.cont01txt a{display: block; width: 185px; height: 60px; line-height: 60px; color: #fff; border-radius: 30px; transition: 0.3s}
 
+.cont01menu{float: right; width: 480px; height: 540px; padding-top: 225px;}
+.cont01menu a{color: #222; font-weight: bold;}
+.cont01menu li{float: left; margin: 0 0 30px 30px; width: 210px; height: 240px; transition: 0.3s; padding-top: 40px; box-shadow: 0 0 5px rgba(110,110,110,0.2);}
+.cont01menu img{display: block; padding-left: 71.5px; padding-bottom: 25px;}
+.cont01menu p{font-size: 20px}
 
+/*cont02*/
+.cont02wrap{height: 800px;}
+.cont02{position: relative;}
+.cont02 img{position: absolute; top: 150px; right: 0;}
+.cont02txt{float: left; padding-top: 260px; width: 350px;}
+.cont02txt h2{font-size: 26px; padding-bottom: 35px;}
+.cont02txt p{font-size: 18px; padding-bottom: 60px;}
+.cont02txt a{display: block; width: 185px; height: 60px; line-height: 60px; color: #fff; border-radius: 30px; transition: 0.3s}
 
+/*cont03*/
+.cont03{height: 460px; padding-top: 165px;}
+.cont03 h2{font-size: 26px; padding-bottom: 65px;}
+.cont03 .cont03btn{width: 420px; margin: 0 auto;}
+.cont03 a.active{color: #fff;}
+.cont03 a:hover{background-color: #2c2c96;color: #fff; transition: 0.3s}
+.cont03 a{display: block; width: 210px; height: 70px; line-height: 70px; color: #222; border-radius: 35px; transition: 0.3s; float: left;}
+
+/*cont04*/
+.cont04txt h2{font-size: 26px; padding-bottom: 35px; padding-top: 40px;}
+.cont04txt p{font-size: 18px; padding-bottom: 110px;}
+.cont04menu li{width: 1200px; height: 130px; line-height: 130px; border-radius: 65px; border: 1px solid rgba(110,110,110,0.1); margin-bottom: 50px;}
+.cont04menu span{color: #222; font-size: 18px; font-weight: bold;}
+.cont04menu span.left{float: left; text-indent: 105px;}
+.cont04menu span.right{float: right;text-indent: -105px; font-size: 36px; font-weight: normal;}
+.cont04menu li:hover .right{color: #2c2c96;}
+
+/*cont05*/
+.cont05{position: relative; height: 600px;}
+.cont05 img{position: absolute; top: 160px; right: 0;}
+.cont05txt{float: left; padding-top: 190px; width: 500px;}
+.cont05txt h2{font-size: 26px; padding-bottom: 35px;}
+.cont05txt p{font-size: 18px; padding-bottom: 60px;}
+.cont05txt a{display: block; width: 245px; height: 60px; line-height: 60px; color: #fff; border-radius: 30px; transition: 0.3s}
+
+/*footer*/
+.footer{height: 470px;}
+.footer .ft_left{float: left; padding-bottom: 50px;}
+.footer .ft_left img{display: block; padding-top: 160px; padding-bottom: 20px;}
+.footer .ft_right{float: right; padding-top: 190px;}
+.footer .ft_right ul{float: left;padding-left: 90px;}
+.footer .ft_right h3{padding-bottom: 50px;}
+.footer .ft_right a{color: #6e6e6e; padding-bottom: 5px; display: block;}
+.footer .ft_bottom{border-top: 1px solid #c4c4c7; width: 1200px; float: left; padding-top: 10px;}
+.footer .ft_bottom .copy{float: left;}
+.footer .ft_bottom .right{float: right; color: #6e6e6e;padding-left: 50px;}
