--- a/02hangukuniversity/css/style.css
+++ b/02hangukuniversity/css/style.css
@@ -1,5 +1,7 @@
 @charset "utf-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
+
 /*header*/
 .util_menu_wrap{background-color: #0044af;}
 .util_menu{width: 1200px; margin: 0 auto; }
